# gpt-stickwar

./: .gitignore  CMakeLists.txt  README.md
include/: Game.h  Stickman.h
src/: Game.cpp  Stickman.cpp  main.cpp
